# bioinf-rosalind

./: .gitignore  Pipfile  README.md  client.py  config.py  main.py  pyproject.toml  setup.py
client/: .gitignore  __init__.py  init.py  input_output.py  setup.py  tests.py  uniprot.py  utilities.py  workspace.py
client/client.egg-info/: PKG-INFO  SOURCES.txt
client/web/: account.py  exceptions.py  exercises.py  parsers.py  uniprot.py
lib/: .gitignore  constants.py  counting_nucleotides.py  fib.py  motif.py  restriction_sites.py  reverse_translation.py  setup.py  shared_motif.py  transcription.py  translation.py
lib/constants/: __init__.py
lib/lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lib/stronghold/: complement.py  cons.py  counting_nucleotides.py  fib2.py  gc.py  graph.py  hamming.py  iprb.py  lexf.py  mprt.py  mrna.py  orf.py  prob2.py  prob3.py  prot.py  prtm.py  rna.py  splc.py
lib/utils/: rosalind_fasta.py
rosalind_cli/: main.py
rosalind_cli/client/: __init__.py  input_output.py  options.py  tests.py  utilities.py  workspacelib.py
rosalind_cli/client/web/: account.py  exercises.py
solution_tests/: dna.py
templates/: starter.py  starter_list.py  starter_map.py  test_template.py
