[tool.poetry]
name = "rosalind-cli"
version = "0.1.0"
description = "Create, modify and publish your solutions to the problems of the Rosalind Web Project."
authors = ["Michael Velandia <msvelandiag@unal.edu.co>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rosalind_cli"}]

[tool.poetry.scripts]
rosalind-cli = "rosalind_cli.main:app"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
typer = {extras = ["all"], version = "^0.9.0"}
beautifulsoup4 = "^4.12.2"
requests = "^2.30.0"
requests-toolbelt = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
